heading overflow resolved

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,6 +29,11 @@
     }
 
     @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    @include respond(tab-port) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     }
